# tioj-judge

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODOLIST.md
cmake/: BundleStaticLibrary.cmake  FetchContentExclude.cmake  Findzstd.cmake
include/tioj/: logger.h  paths.h  reporter.h  submission.h  tasks.h  utils.h
patches/: spdlog.patch  websocketpp.patch
scripts/: init.sh
src/: CMakeLists.txt  cpuset.cpp  cpuset.h  database.cpp  database.h  http_utils.cpp  http_utils.h  main.cpp  paths.cpp  paths.h  reporter.h  sandbox.cpp  sandbox.h  server_io.cpp  server_io.h  submission.cpp  submission.h  tasks.cpp  tasks.h  testsuite.cpp  testsuite.h  utils.cpp  utils.h  websocket.cpp  websocket.h
src/tioj/: logger.cpp  paths.cpp  paths.h  sandbox.cpp  sandbox.h  sandbox_exec.cpp  sandbox_exec.h  sandbox_main.cpp  submission.cpp  submission.h  tasks.cpp  tasks.h  utils.cpp  utils.h
test/: default_scoring_test.cpp  example_problem.cpp  example_problem.h  problem_type_test.cpp  setup.cpp  submission_test.cpp  utils.cpp  utils.h  verdict_test.cpp
tools/: default-scoring.cpp
